<resources>
    <string name="app_name">HealthCheck AI</string>
    <string name="chat">Chat</string>
    <string name="tools">Tools</string>
    <string name="personal_data">Personal Data</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="imc_calculator">IMC Calculator</string>
    <string name="age">Age (Years olds)</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="calc">Calc</string>
    <string name="imc_20_normal">20 (Normal)</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="_1500_cal_day">1500 cal/day</string>
    <string name="cal_day">cal/day</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="o">------ o ------</string>
    <string name="register">Register</string>
    <string name="basic">Basic</string>
    <string name="save">Save</string>
    <string name="detailed">Detailed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="heart_problems">Heart Problems</string>
    <string name="diabetes">Diabetes</string>
    <string name="allergy">Allergy</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="avatar">Avatar</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="terms_and_conditions_1">Terms and Conditions</string>
    <string name="terms_and_conditions_2">Acceptance of the Terms</string>
    <string name="terms_and_conditions_3">Welcome to HealthCheck AI. By downloading, installing, or using the application, you agree to be bound by these Terms and Conditions (hereinafter, "Terms"). If you do not agree with these Terms, you should not use the application.</string>
    <string name="terms_and_conditions_4">Description of the Service</string>
    <string name="terms_and_conditions_5">HealthCheck AI is a mobile application that uses artificial intelligence to help users evaluate their health symptoms and provide possible diagnoses and personalized recommendations. The application allows users to enter their personal data and symptoms and offers additional tools for health monitoring.</string>
    <string name="terms_and_conditions_6">Account Registration and Security</string>
    <string name="terms_and_conditions_7">To use HealthCheck AI, you must register by providing personal information, such as your name, email address, and password. You are responsible for maintaining the confidentiality of your account and password and for all activities that occur under your account. HealthCheck AI will not be liable for any loss or damage arising from your failure to comply with this security obligation.</string>
    <string name="terms_and_conditions_8">Use of Personal Data</string>
    <string name="terms_and_conditions_9">HealthCheck AI collects and uses personal data such as age, weight, allergies, and other relevant data to provide accurate diagnoses and recommendations. All personal data will be treated in accordance with our Privacy Policy, which can be viewed in the application.</string>
    <string name="terms_and_conditions_10">Limitation of Liability</string>
    <string name="terms_and_conditions_11">HealthCheck AI is not a substitute for professional medical consultation. The diagnoses and recommendations provided by the application are for informational purposes only and should not be used as a basis for making medical decisions without consulting a healthcare professional. HealthCheck AI is not responsible for any damage or harm resulting from the use of the application.</string>
    <string name="terms_and_conditions_12">Intellectual Property</string>
    <string name="terms_and_conditions_13">All rights, titles, and interests in HealthCheck AI, including but not limited to software, text, graphics, and logos, are the exclusive property of HealthCheck AI and are protected by intellectual property laws. No rights or licenses are granted to you regarding these intellectual property rights.</string>
    <string name="terms_and_conditions_14">Service and Terms Modifications</string>
    <string name="terms_and_conditions_15">HealthCheck AI reserves the right to modify or discontinue, temporarily or permanently, the service offered by the application without prior notice. We also reserve the right to modify these Terms at any time. Changes will be effective once posted in the application. Your continued use of the application after any modifications have been posted constitutes your acceptance of those changes.</string>
    <string name="terms_and_conditions_16">Termination</string>
    <string name="terms_and_conditions_17">We may suspend or terminate your access to the application at any time, without prior notice, if we believe you have violated these Terms or any applicable law, or for any other reason. Upon termination, all rights and licenses granted to you under these Terms will cease.</string>
    <string name="terms_and_conditions_18">Governing Law</string>
    <string name="terms_and_conditions_19">These Terms will be governed and construed in accordance with the laws of Spain, without regard to its conflict of law provisions. You agree to submit to the exclusive jurisdiction of the courts located in Mérida, Spain, to resolve any dispute arising out of these Terms or the use of the application.</string>
    <string name="terms_and_conditions_20">Contact</string>
    <string name="terms_and_conditions_21">If you have any questions or concerns about these Terms, please contact us at sauldiazdiaz210@gmail.com.</string>
    <string name="terms_and_conditions_22">By using HealthCheck AI, you agree to these Terms and Conditions in their entirety.</string>
    <string name="must_enter_username">You must enter a username</string>
    <string name="must_enter_password">You must enter a password</string>
    <string name="must_enter_email">You must enter an email</string>
    <string name="unexpected_error">An unexpected error occurred</string>
    <string name="username_or_email_already_exists">Username or email already exists</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="logout">Logout</string>
    <string name="error_invalid_height">Ivalid height</string>
    <string name="error_invalid_weight">Ivalid weight</string>
    <string name="imc_status_normal">Normal</string>
    <string name="error_invalid_age">Invalid age</string>
    <string name="error_invalid_gender">Invalid gender</string>
    <string name="imc_status_underweight">Underweight</string>
    <string name="imc_status_overweight">Overweight</string>
    <string name="imc_status_obesity">Obesity</string>
    <string name="username_must_be_at_least_6_characters">Username must be at least 6 characters</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="password_must_contain_number_letter_special">Password must contain at least one number, one letter, and one special character</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="user_not_found">User not found</string>
    <string name="personal_data_updated">Personal data updated</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_old_password">You must enter the old password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="select_image">Select image</string>
    <string name="take_picture">Take picture</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="upload_successful">Upload successful</string>
    <string name="upload_failed">Upload failed</string>
    <string name="saved">Saved</string>
    <string name="avatar_updated">Avatar updated</string>
    <string name="password_updated">Password updated</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="logo">Logo</string>
    <string name="clear_chat_data">Clear chat data</string>
    <string name="clear_chat">Clear chat</string>
    <string name="are_you_sure_you_want_to_clear_chat">Are you sure you want to cleat the chat??</string>
    <string name="chat_cleared">Chat cleared</string>
</resources>