<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/backgroundPrimary"
            android:elevation="5dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/avatar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/avatar"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/backgroundPrimary"
            android:elevation="5dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/backgroundInput"
                android:ems="10"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/backgroundInput"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/backgroundInput"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:minHeight="48dp"
            android:text="@string/save"
            tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/clearChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#AEFF8D8D"
            android:minHeight="48dp"
            android:text="@string/clear_chat_data"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#F34646"
            android:minHeight="48dp"
            android:text="@string/logout"
            android:textColor="#000000"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>